--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
-    margin: 0;
+    margin: 0;    
+}
+
+body * {
     box-sizing: border-box;
 }
 
@@ -46,6 +49,10 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     margin-right: 47px;
+}
+
+a.colored {
+    color: #E3B873;
 }
 
 .phone {
