--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body * {
     margin: 0 auto;
 }
 
+p {
+    margin: 0;
+}
+
 .title {
     list-style: none;
     margin: 0;
@@ -91,6 +95,8 @@ body * {
     background: #E3B873;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
     border-radius: 2px;
+    width: 200px;
+    height: 51px;
 }
 
 .button-first {
@@ -117,13 +123,12 @@ body * {
     position: absolute;
 }
 
-
 .section-first-content {
     position: relative;
     z-index: 1;
 }
 
-.main-title {
+.title--main {
     margin: 0;
     font-size: 40px;
     line-height: 53px;
@@ -165,7 +170,9 @@ color: #E3B873;
 }
 
 .container.section-second-left {
+    margin: 0;
     padding-top: 176px;
+    padding-left: 134px;
 }
 
 .container.section-second-right {
@@ -174,9 +181,10 @@ color: #E3B873;
 
 .section-second-content {
     display: flex;
+    justify-content: space-between;
 }
 
-.title-large {
+.title--large {
     font-size: 27px;
     line-height: 37px;
     letter-spacing: -0.07em;
@@ -212,6 +220,11 @@ color: #E3B873;
     font-size: 13px;
     line-height: 21px;
     margin-bottom: 34px;
+}
+
+.title--small {
+    font-size: 18px;
+    line-height: 25px;
 }
 
 .navigation-arrows__right-arrow {
@@ -297,4 +310,126 @@ color: #E3B873;
     top: 5px;
     margin-right: -100%;
     right: -20px;
+}
+
+.section-third {
+    height: 1258px;
+}
+
+.video {
+    text-align: center;
+    position: relative;
+    margin-top: -200px;
+}
+
+.play-button {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    z-index: 1;
+}
+
+.play-button--1 {
+    padding-bottom: 10px;
+    padding-left: 7px;
+}
+
+.section-second-overlay {
+    content: '';
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    margin: auto;
+    width: 817px;
+    height: 440px;
+}
+
+hr {
+    border: none;
+    border-radius: 30px;
+    background-color: #E3B873;; 
+    height: 2px;
+    width: 55px;
+}
+
+.border--1 {
+    margin-top: 63px;
+    margin-bottom: 34px;
+}
+
+.description--black-font {
+    color: #363636;
+}
+
+.description--black-font--video {
+    font-size: 18px;
+    line-height: 37px;
+    text-align: center;
+    margin-bottom: 93px;
+}
+
+.form-third-section {
+    margin: auto;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 600px;
+    margin-bottom: 37px;
+}
+
+.button-submit:focus {
+    color: black;
+}
+
+.input-text--1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 520px;
+    margin-right: 49px;
+    text-align: start;
+}
+
+label.description-checkbox--1 {
+    margin-left: 572px;
+}
+
+.projects-demonstration {
+    margin: 31px 100px 100px;
+}
+
+.projects {
+    margin-top: -50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.projects h4 {
+text-align: center;
+}
+
+.projects__item {
+    text-align: start;
+    width: 330px;
+    height: 286px;    
+    background-color: white;
+    position: relative;
+    z-index: 1;
+}
+
+.projects-images {
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.projects-prices {
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
